static_sites/baby-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: baby
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - baby.burntsheep.com
    secretName: baby-cert
  rules:
  - host: baby.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: baby
          servicePort: 80
