static_sites/default-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 0default
spec:
  rules:
  - host: a.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: default-http-backend
          servicePort: 80
