static_sites/fileserv-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fileserv
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - fileserv.burntsheep.com
    secretName: fileserv-cert
  rules:
  - host: fileserv.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fileserv
          servicePort: 80
