static_sites/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: grafana.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: default-http-backend
          servicePort: 80
