static_sites/hass-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hass
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - hass.burntsheep.com
    secretName: hass-cert
  rules:
  - host: hass.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hass
          servicePort: 80
