static_sites/netdata-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: netdata
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - netdata.burntsheep.com
    secretName: netdata-cert
  rules:
  - host: netdata.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: netdata
          servicePort: 80
