static_sites/openhab-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openhab
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - openhab.burntsheep.com
    secretName: openhab-cert
  rules:
  - host: openhab.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: openhab
          servicePort: 80
