static_sites/phpmyadmin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phpmyadmin
spec:
  rules:
  - host: phpmyadmin.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: default-http-backend
          servicePort: 80
      - path: /.well-known
        backend:
          serviceName: letsencrypt
          servicePort: 80
