static_sites/router-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: router
spec:
  rules:
  - host: router.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: router
          servicePort: 80
      - path: /.well-known
        backend:
          serviceName: letsencrypt
          servicePort: 80
