static_sites/sabnzbd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sabnzbd
spec:
  tls:
  - hosts:
    - sabnzbd.burntsheep.com
    secretName: nginx-certs
  rules:
  - host: sabnzbd.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sabnzbd
          servicePort: 80
      - path: /.well-known
        backend:
          serviceName: letsencrypt
          servicePort: 80
