static_sites/sonaar-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonaar
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - sonaar.burntsheep.com
    secretName: sonaar-cert
  rules:
  - host: sonaar.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sonaar
          servicePort: 80
